# granite-marketing-accounts

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
directives/: ingest_email.md  reauth.md  setup.md
docs/brainstorms/: 2026-04-17-accounting-assistant-requirements.md  2026-04-18-hosted-invoices-and-progress-ui-requirements.md  2026-04-18-invoice-management-ui-requirements.md  2026-04-19-bank-reconciliation-requirements.md  2026-04-19-parallel-invoice-processing-requirements.md
docs/ideation/: 2026-04-19-open-ideation.md
docs/plans/: 2026-04-17-001-feat-accounting-assistant-pipeline-plan.md  2026-04-18-001-feat-invoice-management-web-ui-plan.md  2026-04-18-002-feat-hosted-invoices-progress-ui-reliability-plan.md  2026-04-19-001-feat-parallel-invoice-processing-plan.md  2026-04-19-002-feat-ux-improvements-fx-conversion-plan.md  2026-04-19-003-feat-bank-reconciliation-plan.md
docs/solutions/architecture-issues/: layer-separation-enforcement.md
docs/solutions/integration-issues/: google-oauth-reauth-and-lazy-clients.md  interface-mismatch-integration-testing.md  invoice-export-and-link-pdf-fixes.md  ms365-search-pagination.md
docs/solutions/patterns/: ms-graph-email-sync-patterns.md  stale-run-cleanup-pattern.md
execution/: __init__.py  __main__.py  cli.py
execution/adapters/: __init__.py  amex_csv.py  amex_email.py  monzo.py  ms365.py  wise.py
execution/invoice/: category.py  classifier.py  extractor.py  filer.py  pdf_fetcher.py  processor.py
execution/invoice/prompts/: classifier.md  classifier.schema.json  extractor.md  extractor.schema.json
execution/ops/: __init__.py  healthcheck.py
execution/ops/launchd/: com.granite.accounts.plist  install.sh
execution/output/: __init__.py  sheet.py
execution/reconcile/: __init__.py  clearing.py  ledger.py  match.py  pending_link.py  run.py  split.py  state.py
execution/shared/: __init__.py  budget.py  claude_client.py  clock.py  db.py  error_message.py  errors.py  fiscal.py  fx.py  http.py  llm_client.py  money.py  names.py  openai_client.py  prompts.py  secrets.py  sheet.py  types.py
execution/shared/migrations/: 001_init.sql  002_add_unprocessed_index.sql  002_invoice_fx_columns.sql  003_add_web_indexes.sql  004_add_run_operation.sql  005_add_needs_manual_download.sql  006_add_email_dismissal.sql  (+8 more)
tests/: conftest.py  test_amex_csv.py  test_amex_email.py  test_budget.py  test_category.py  test_classifier.py  test_claude_client.py  test_clearing.py  test_cli.py  test_clock.py  test_db.py  test_error_message.py  test_errors.py  test_extractor.py  test_filer.py  test_fiscal.py  test_fx.py  test_healthcheck.py  test_http.py  test_launchd_plist.py  test_ledger.py  test_match.py  test_migrations_immutable.py  test_money.py  test_monzo.py  test_ms365.py  test_names.py  test_openai_client.py  test_output_sheet.py  test_pdf_fetcher.py  test_pending_link.py  test_processor.py  test_prompts.py  test_reconcile_run.py  test_secrets.py  test_sheet.py  test_split.py  test_state.py  test_wise.py
web/: next.config.ts  package-lock.json  package.json
web/src/: middleware.ts
(+44 files in other folders)
